--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,4 @@ serde_with = "3.16.1"
 
 reqwest = { version = "0.13.2", optional = true }
 axum = { version = "0.8.8", optional = true }
+log = "0.4.29"
