--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ axum = ["dep:axum"]
 
 [dependencies]
 base64 = "0.22.1"
-iref = { version = "3.2.2", features = ["serde"] }
+iref = { version = "3.2.2", features = ["serde", "macros"] }
 rand = "0.10.0"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_html_form = "0.4.0"
