--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,12 @@
 [package]
 name = "open-auth2"
-version = "0.1.0"
+authors = ["Spruce Systems, Inc."]
+description = "Modular library for the OAuth 2.0 Authorization Framework"
+keywords = ["oauth2", "authentication", "authorization", "security", "rust"]
+categories = ["authentication", "web-programming", "network-programming"]
+license = "Apache-2.0 OR MIT"
 edition = "2024"
+version = "0.1.0"
 
 [features]
 reqwest = ["dep:reqwest"]
